--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "agora-stream-player": "^1.1.3",
     "agoran-awe": "1.1.2",
     "notistack": "^0.8.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-scripts": "latest",
     "typescript": "3.5.1"
   },
   "scripts": {
